<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <ImageView
        android:id="@+id/backgroundMap"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-50dp"
        android:layout_marginBottom="-50dp"
        android:alpha="0.5"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/map"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/logoGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/lanka_go"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lanka_go"
            android:textColor="#2056A8"
            android:textSize="38sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-black"/>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        app:cardCornerRadius="40dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoGroup"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/panel_gradient"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_language"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="#80000000" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnEnglish"
                android:layout_width="220dp"
                android:layout_height="55dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/language_button_bg"
                android:text="@string/english"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSinhala"
                android:layout_width="220dp"
                android:layout_height="55dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/language_button_bg"
                android:text="@string/sinhala"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnTamil"
                android:layout_width="220dp"
                android:layout_height="55dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/language_button_bg"
                android:text="@string/tamil"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>