<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <ImageView
        android:id="@+id/bgMap"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.4"
        android:scaleType="centerCrop"
        android:src="@drawable/map"
        android:contentDescription="@null" />

    <LinearLayout
        android:id="@+id/logoSection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/lanka_go" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/lanka_go"
            android:textColor="#2056A8"
            android:textSize="55sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoSection">

        <LinearLayout
            android:id="@+id/btnSelectDriver"
            android:layout_width="260dp"
            android:layout_height="110dp"
            android:background="@drawable/bg_role_button"
            android:gravity="center"
            android:orientation="vertical"
            android:elevation="4dp"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/driver"
                app:tint="@android:color/black"
                android:contentDescription="@null" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/driver_label"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnSelectPassenger"
            android:layout_width="260dp"
            android:layout_height="110dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_role_button"
            android:clickable="true"
            android:elevation="4dp"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@null"
                android:src="@drawable/passenger"
                app:tint="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/passenger_label"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>